# nc2pt

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  jupyter_notebook_config.py  pyproject.toml  requirements.txt  setup.py
.github/: workflows
.github/workflows/: miniconda.yml  python-package-conda.yml
ClimatExPrep/: create_batches.py  preprocess.py  preprocess_helpers.py  preprocess_hr.py  preprocess_lr.py  single_file_to_batches.py  zarr_to_torch.py  zarr_to_torch_parallel.py  zarr_to_torch_parallel_batches.py
ClimatExPrep/cdo_scripts/: crop_to_usask.sh
ClimatExPrep/conf/: config.yaml
ClimatExPrep/data/: wrf_grid.nc
ClimatExPrep/tests/: test_config.yaml
ClimateXPrep/: environment.yml  preprocess.py  preprocess_helpers.py
ClimateXPrep/conf/: config.yaml
ClimateXPrep/tests/: test_config.yaml  test_preprocess_helpers.py
config/: config.yml
nc2pt/: align.py  climatedata.py  computations.py  io.py  metadata.py  preprocess.py  preprocess_helpers.py  preprocess_hr.py  preprocess_lr.py
nc2pt/conf/: config.yaml
nc2pt/tests/: former_test_preprocess_helpers.py  test_align.py  test_computations.py  test_config.yaml  test_data.py  test_io.py  test_metadata.py  test_preprocess_helpers.py
nc2pt/tools/: mask_precip.py  single_file_to_batches.py  zarr_to_torch.py
notebooks/: Untitled.ipynb  test_xesmf.ipynb
src/: regrid_align.py
src/conf/: config.yaml
tools/: single_file_to_batches.py  zarr_to_torch_parallel.py
tools/cdo_scripts/: cdo_config.yaml  cdo_config.yml  cdo_select.py  (+5 more)
(+55 files in other folders)
