[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nc2pt"
authors = [{name = "Nic Annau", email = "nicannau@gmail.com"}]
description = "Multi-step package to serialize NetCDF files to PyTorch lightning files."
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = [".", "nc2pt"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["nc2pt.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 120